# cvm-project

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  LICENSE  README.md  add_cffi.py  dag.json  jit_group_by.py  jitq_config.ci.json  letter_freqs.py  map_filter.py  numba_hacks.py  passing_list.ll  passing_list_cffi.py  requirements-top-level.txt  requirements.txt  test.py  testing.ll  testing.py  word_freq_join.py
backend/src/: CMakeLists.txt  generate_dag_plan.cpp  generate_dag_plan.h  generate_dag_plan.hpp  generate_executable.cpp  generate_executable.h  generate_executable.hpp  main.cpp  python_module.cpp
backend/src/IR_analyzer/: LLVMParser.cpp  LLVMParser.h  SchemaInference.cpp  SchemaInference.h  llvm_field_type_visitor.cpp  llvm_field_type_visitor.hpp
backend/src/benchmarks/: CMakeLists.txt  main.cpp  max_memory.c
backend/src/benchmarks/src/: main.cpp  timing.h
backend/src/code_gen/common/: BackEnd.hpp  back_end.hpp
backend/src/code_gen/cpp/: .gitignore  BackEnd.cpp  BackEnd.hpp  CodeGenVisitor.cpp  CodeGenVisitor.h  Makefile  back_end.cpp  back_end.hpp  code_gen.cpp  code_gen.hpp  context.cpp  context.hpp
backend/src/compiler/: compiler.cpp  compiler.hpp  generate_executable.cpp  generate_executable.h  generate_executable.hpp
backend/src/dag/: CMakeLists.txt  Column.cpp  DAG.cpp  DAG.h  DAGAssertCorrectOpenNextClose.h  DAGCartesian.h  DAGCollection.cpp  DAGCollection.h  DAGColumnScan.cpp  DAGColumnScan.h  DAGCompiledPipeline.cpp  DAGCompiledPipeline.h  DAGConstantTuple.cpp  DAGConstantTuple.h  DAGCreation.cpp  DAGEnsureSingleTuple.h  DAGExpandPattern.h  DAGFilter.cpp  DAGFilter.h  DAGGroupBy.h  DAGJoin.h  DAGMap.h  DAGMaterializeColumnChunks.h  DAGMaterializeParquet.cpp  DAGMaterializeParquet.h  DAGMaterializeRowVector.h  DAGOperator.cpp  DAGOperator.h  DAGOperators.h  DAGParallelMap.h  DAGParameterLookup.cpp  DAGParameterLookup.h  DAGParquetScan.cpp  DAGParquetScan.h  DAGPartition.h  DAGPipeline.cpp  DAGPipeline.h  DAGProjection.cpp  DAGProjection.h  DAGRange.cpp  (+18 more)
backend/src/dag/collection/: array.cpp  array.hpp  atomic.hpp  attribute_id.cpp  field.cpp  field.hpp  tuple.cpp  tuple.hpp
backend/src/dag/src/: dag.cpp
backend/src/generate/: CMakeLists.txt
backend/src/llvm_helpers/: function.cpp  function.hpp
backend/src/optimize/: Optimizer.cpp  SimplePredicateMoveAround.cpp  SimplePredicateMoveAround.h  add_always_inline.cpp  add_always_inline.hpp  assert_correct_open_next_close.cpp  assert_correct_open_next_close.hpp  attribute_id_tracking.cpp  attribute_id_tracking.hpp  canonicalize.cpp  canonicalize.hpp  code_gen.cpp  code_gen.hpp  column_tracking.cpp  column_tracking.hpp  composite_transformation.cpp  composite_transformation.hpp  create_pipelines.cpp  create_pipelines.hpp  dag_transformation.cpp  dag_transformation.hpp  determine_sortedness.cpp  determine_sortedness.hpp  grouped_reduce_by_key.cpp  grouped_reduce_by_key.hpp  materialize_multiple_reads.cpp  materialize_multiple_reads.hpp  optimizer.cpp  optimizer.hpp  parallelize.cpp  parallelize.hpp  simple_predicate_move_around.cpp  simple_predicate_move_around.hpp  type_inference.cpp  type_inference.hpp
backend/src/python_module/: CMakeLists.txt
backend/src/runtime/: CMakeLists.txt  execute_plan.cpp  execute_plan.hpp  free.cpp  free.hpp
backend/src/tests/: LLVMParser.cpp  TestDagParser.cpp  hello.cpp  llvm_helpers_function.cpp  shared_pointer_test.cpp
backend/src/tools/: CMakeLists.txt  opt.cpp
backend/src/utils/: CMakeLists.txt  DAGVisitor.cpp  DAGVisitor.h  c_type_to_llvm.cpp  c_type_to_llvm.h  field_visitor.hpp  lib_path.cpp  printDAG.cpp  printDAG.h  raw_ptr.hpp  registry.hpp  utils.cpp  utils.h  visitor.hpp
cpp/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  c_generate_dag_plan.c  c_generate_dag_plan.h  cmake_install.cmake  cpp  cpp.cbp  dag.json  generate_dag_plan.cpp  generate_dag_plan.hpp  generate_execute.cpp  m3in_gcc  main.cpp  main.s  main_gcc  main_gcc.s  main_o  sum.cpp
cpp/benchmarks/: Makefile  main  main.bc  main.cpp  main_gcc  main_gcc.s  max_memory
cpp/gen_example/: Makefile  c_execute.c  c_execute.h  execute  execute.asm  execute.bc  execute.cpp  main  main.asm  main.bc  main.cpp  tuples.h
cpp/gen_example/functions/: MapFunction0.hpp
cpp/gen_example/functions_llvm/: llvm_map_function0.bc  map_operator_function_0.bc
cpp/src/: CMakeLists.txt  config.h  generate_dag_plan.cpp  generate_dag_plan.h  main.cpp
cpp/src/IR_analyzer/: LLVMParser.cpp  LLVMParser.h  Parser.cpp  Parser.h  SchemaInference.cpp  SchemaInference.h
cpp/src/benchmarks/: main.cpp  max_memory.c
cpp/src/code_gen/: CodeGenVisitor.cpp  CodeGenVisitor.h  generate_code.cpp  generate_code.h
cpp/src/dag/: Column.cpp  Column.h  DAG.cpp  DAG.h  DAGCartesian.cpp  DAGCartesian.h  DAGCollection.cpp  DAGCollection.h  DAGCreation.cpp  DAGCreation.hpp  DAGFilter.cpp  DAGFilter.h  DAGJoin.cpp  DAGJoin.h  DAGMap.cpp  DAGMap.h  DAGOperator.cpp  DAGOperator.h  DAGOperators.h  DAGRange.cpp  DAGRange.h  DAGReduce.cpp  DAGReduce.h  DAGReduceByKey.cpp  DAGReduceByKey.h  TupleField.cpp  TupleField.h
cpp/src/libs/: optional.h
cpp/src/operators/: .gitignore  CartesianOperator.h  CollectionSourceOperator.cpp  CollectionSourceOperator.h  FilterOperator.cpp  FilterOperator.h  JoinOperator.cpp  JoinOperator.h  Makefile  MapOperator.cpp  MapOperator.h  Operator.h  Operators.h  Operators.hpp  RangeSourceOperator.cpp  RangeSourceOperator.h  ReduceByKeyGroupedOperator.h  ReduceByKeyOperator.h  ReduceOperator.h  merge_headers.sh
cpp/src/optimize/: Optimizer.h  SchemaInference.cpp  SchemaInference.h  SimplePredicateMoveAround.cpp  SimplePredicateMoveAround.h
cpp/src/tests/: LLVMParser.cpp
cpp/src/utils/: DAGVisitor.cpp  DAGVisitor.h  Makefile  Makefile.release  c_type_to_llvm.cpp  c_type_to_llvm.h  constants.h  debug_print.h  printDAG.cpp  printDAG.h  string_replace.cpp  timing.c  timing.cpp  timing.h  tuple_to_string.bc  tuple_to_string.cpp  tuple_to_string.h  utils.cpp  utils.h
cpp/testing/: CMakeLists.txt  LLVMParser.cpp  Makefile  cmake_install.cmake
(+2908 files in other folders)
